Another change to force deployment

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -3,7 +3,7 @@
 
 <!doctype html>
 <html lang="en" data-framework="javascript">
-<!--triggering another change-->
+<!--triggering yet another change-->
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
