Update to index.html, testing deployed changes

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Office Add-in</title>
 </head>
 <body>
-  <h1>The app is available in Azure</h1>
+  <h1>Office add-in available in Azure</h1>
   <div id="root"></div>
 </body>
 </html>
